data/stackoverflow-snippets/scala/853
λ scalac -Xlog-implicits Implicit.scala
Implicit.scala:22: WithByAB is not a valid implicit value for Wrapper[ByAX[String,AB]] => ?{def printsomething: ?} because:
inferred type arguments [Nothing,ByAX[String,AB]] do not conform to method WithByAB's type parameter bounds [T,S <: ByA[T,AB]]
    Wrapper[ByAX[String, AB]]().printsomething()
                             ^
Implicit.scala:22: error: value printsomething is not a member of Wrapper[ByAX[String,AB]]
    Wrapper[ByAX[String, AB]]().printsomething()
                                ^
one error found
